--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "undici-types": "^5.26.5"
   },
   "scripts": {
-    "test": "npx playwright test --report=html"
+    "test": "echo tests will run when container is built"
   },
   "repository": {
     "type": "git",
